Refine editor workflows and extend backend commands

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tiptap/pm": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
     "lucide-svelte": "^0.562.0",
+    "marked": "^17.0.1",
     "svelte-i18n": "^4.0.1"
   },
   "devDependencies": {
